Wait for database to be available before starting bookstack_container to avoid errors

--- a/docker-compose_template.yaml
+++ b/docker-compose_template.yaml
@@ -36,10 +36,18 @@ services:
       - DB_DATABASE=bookstackapp
     volumes:
       - ./bookstack_config:/config
+      - ../wait-for-it.sh:/wait-for-it.sh
+      - ../sleep-before-init.sh:/sleep-before-init.sh
     ports:
       - "6875:80"  # map 80 in container to 6875 in host machine  <external>:<internal>
-    depends_on:
-      - bookstack_db
+    depends_on: 
+      - "bookstack_db"
+    command:
+      - "/wait-for-it.sh"
+      - "bookstack_db:3306"
+      - "--"
+      - "/sleep-before-init.sh"
+    entrypoint: []
     restart: unless-stopped
     networks:
       - bookstack-network
